Included Saving to hdf5

--- a/notebooks/process_data/align_fasta.ipynb
+++ b/notebooks/process_data/align_fasta.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,7 @@
     "from shutil import which\n",
     "import os\n",
     "import re as re\n",
+    "import h5py  # Python Package to do the HDF5.\n",
     "\n",
     "### Pick the right path (whether on cluster or at home)\n",
     "socket_name = socket.gethostname()\n",
@@ -391,185 +392,6 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"./output/single_seq_aligned.tsv\", sep=\"\\t\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>iid</th>\n",
-       "      <th>iid_clean</th>\n",
-       "      <th>cov</th>\n",
-       "      <th>include</th>\n",
-       "      <th>aligned_path</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>hCoV-19/USA/WA-S88/2020|EPI_ISL_417141|2020-03-01</td>\n",
-       "      <td>hCoV-19.USA.WA-S88.2020.EPI_ISL_417141.2020-03-01</td>\n",
-       "      <td>29868</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>hCoV-19/USA/WA-S89/2020|EPI_ISL_417142|2020-02-29</td>\n",
-       "      <td>hCoV-19.USA.WA-S89.2020.EPI_ISL_417142.2020-02-29</td>\n",
-       "      <td>29858</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>hCoV-19/USA/WA-S87/2020|EPI_ISL_417140|2020-03-01</td>\n",
-       "      <td>hCoV-19.USA.WA-S87.2020.EPI_ISL_417140.2020-03-01</td>\n",
-       "      <td>29869</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>hCoV-19/USA/WA-S92/2020|EPI_ISL_417145|2020-02-29</td>\n",
-       "      <td>hCoV-19.USA.WA-S92.2020.EPI_ISL_417145.2020-02-29</td>\n",
-       "      <td>29868</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>hCoV-19/USA/WA-S93/2020|EPI_ISL_417146|2020-02-29</td>\n",
-       "      <td>hCoV-19.USA.WA-S93.2020.EPI_ISL_417146.2020-02-29</td>\n",
-       "      <td>29868</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3327</th>\n",
-       "      <td>hCoV-19/USA/WA-UW76/2020|EPI_ISL_415604|2020-0...</td>\n",
-       "      <td>hCoV-19.USA.WA-UW76.2020.EPI_ISL_415604.2020-0...</td>\n",
-       "      <td>29858</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3328</th>\n",
-       "      <td>hCoV-19/USA/WA-UW42/2020|EPI_ISL_415607|2020-0...</td>\n",
-       "      <td>hCoV-19.USA.WA-UW42.2020.EPI_ISL_415607.2020-0...</td>\n",
-       "      <td>29786</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3329</th>\n",
-       "      <td>hCoV-19/USA/WA-UW41/2020|EPI_ISL_415606|2020-0...</td>\n",
-       "      <td>hCoV-19.USA.WA-UW41.2020.EPI_ISL_415606.2020-0...</td>\n",
-       "      <td>29761</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3330</th>\n",
-       "      <td>hCoV-19/USA/WA-UW44/2020|EPI_ISL_415609|2020-0...</td>\n",
-       "      <td>hCoV-19.USA.WA-UW44.2020.EPI_ISL_415609.2020-0...</td>\n",
-       "      <td>29883</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3331</th>\n",
-       "      <td>hCoV-19/USA/WA-UW43/2020|EPI_ISL_415608|2020-0...</td>\n",
-       "      <td>hCoV-19.USA.WA-UW43.2020.EPI_ISL_415608.2020-0...</td>\n",
-       "      <td>29878</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3332 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                    iid  \\\n",
-       "0     hCoV-19/USA/WA-S88/2020|EPI_ISL_417141|2020-03-01   \n",
-       "1     hCoV-19/USA/WA-S89/2020|EPI_ISL_417142|2020-02-29   \n",
-       "2     hCoV-19/USA/WA-S87/2020|EPI_ISL_417140|2020-03-01   \n",
-       "3     hCoV-19/USA/WA-S92/2020|EPI_ISL_417145|2020-02-29   \n",
-       "4     hCoV-19/USA/WA-S93/2020|EPI_ISL_417146|2020-02-29   \n",
-       "...                                                 ...   \n",
-       "3327  hCoV-19/USA/WA-UW76/2020|EPI_ISL_415604|2020-0...   \n",
-       "3328  hCoV-19/USA/WA-UW42/2020|EPI_ISL_415607|2020-0...   \n",
-       "3329  hCoV-19/USA/WA-UW41/2020|EPI_ISL_415606|2020-0...   \n",
-       "3330  hCoV-19/USA/WA-UW44/2020|EPI_ISL_415609|2020-0...   \n",
-       "3331  hCoV-19/USA/WA-UW43/2020|EPI_ISL_415608|2020-0...   \n",
-       "\n",
-       "                                              iid_clean    cov  include  \\\n",
-       "0     hCoV-19.USA.WA-S88.2020.EPI_ISL_417141.2020-03-01  29868     True   \n",
-       "1     hCoV-19.USA.WA-S89.2020.EPI_ISL_417142.2020-02-29  29858     True   \n",
-       "2     hCoV-19.USA.WA-S87.2020.EPI_ISL_417140.2020-03-01  29869     True   \n",
-       "3     hCoV-19.USA.WA-S92.2020.EPI_ISL_417145.2020-02-29  29868     True   \n",
-       "4     hCoV-19.USA.WA-S93.2020.EPI_ISL_417146.2020-02-29  29868     True   \n",
-       "...                                                 ...    ...      ...   \n",
-       "3327  hCoV-19.USA.WA-UW76.2020.EPI_ISL_415604.2020-0...  29858     True   \n",
-       "3328  hCoV-19.USA.WA-UW42.2020.EPI_ISL_415607.2020-0...  29786     True   \n",
-       "3329  hCoV-19.USA.WA-UW41.2020.EPI_ISL_415606.2020-0...  29761     True   \n",
-       "3330  hCoV-19.USA.WA-UW44.2020.EPI_ISL_415609.2020-0...  29883     True   \n",
-       "3331  hCoV-19.USA.WA-UW43.2020.EPI_ISL_415608.2020-0...  29878     True   \n",
-       "\n",
-       "      aligned_path  \n",
-       "0              NaN  \n",
-       "1              NaN  \n",
-       "2              NaN  \n",
-       "3              NaN  \n",
-       "4              NaN  \n",
-       "...            ...  \n",
-       "3327           NaN  \n",
-       "3328           NaN  \n",
-       "3329           NaN  \n",
-       "3330           NaN  \n",
-       "3331           NaN  \n",
-       "\n",
-       "[3332 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
    ]
   },
   {
