--- a/notebooks/process_data/align_fasta.ipynb
+++ b/notebooks/process_data/align_fasta.ipynb
@@ -382,7 +382,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Area 51"
+    "# Area 51\n",
+    "Test code chunks here"
    ]
   },
   {
@@ -576,42 +577,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([22900, 22901, 22902, 22903, 22904, 22905, 22906, 22907, 22908,\n",
-       "       22909, 22910, 22911, 22912, 22913, 22914, 22915, 22916, 22917,\n",
-       "       22918, 22919, 22920, 22921, 22922, 22923, 22924, 22925, 22926,\n",
-       "       22927, 22928, 22929, 22930, 22931, 22932, 22933, 22934, 22935,\n",
-       "       22936, 22937, 22938, 22939, 22940, 22941, 22942, 22943, 22944,\n",
-       "       22945, 22946, 22947, 22948, 22949, 22950, 22951, 22952, 22953,\n",
-       "       22954, 22955, 22956, 22957, 22958, 22959, 22960, 22961, 22962,\n",
-       "       22963, 22964, 22965, 22966, 22967, 22968, 22969, 22970, 22971,\n",
-       "       22972, 22973, 22974, 22975, 22976, 22977, 22978, 22979, 22980,\n",
-       "       22981, 22982, 22983, 22984, 22985, 22986, 22987, 22988, 22989,\n",
-       "       22990, 22991, 22992, 22993, 22994, 22995, 22996, 22997, 22998,\n",
-       "       22999, 23000, 23001, 23002, 23003, 23004, 23005, 23006, 23007,\n",
-       "       23008, 23009, 23010, 23011, 23012, 23013, 23014, 23015, 23016,\n",
-       "       23017, 23018, 23019, 23020, 23021, 23022, 23023, 23024, 23025,\n",
-       "       23026, 23027, 23028, 23029, 23030, 23031, 23032, 23033, 23034,\n",
-       "       23035, 23036, 23037, 23038, 23039, 23040, 23041, 23042, 23043,\n",
-       "       23044, 23045, 23046, 23047, 23048, 23049, 23050, 23051, 23052,\n",
-       "       23053, 23054, 23055, 23056, 23057, 23058, 23059, 23060, 23061,\n",
-       "       23062, 23063, 23064, 23065, 23066, 23067, 23068, 23069, 23070,\n",
-       "       23071, 23072, 23073, 23074, 23075, 23076, 23077, 23078, 23079,\n",
-       "       23080, 23081, 23082, 23083, 23084, 23085, 23086, 23087, 23088,\n",
-       "       23089, 23090, 23091, 23092, 23093, 23094, 23095, 23096, 23097,\n",
-       "       23098, 23099, 23100])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.arange(22900,23101)"
    ]
@@ -699,23 +667,6 @@
     "test = \"AB   Cd E\"\n",
     "test1 = re.sub(\"\\s\", \"_\", test)\n",
     "test1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lol\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('lol')"
    ]
   },
   {
