--- a/notebooks/process_data/create_h5.ipynb
+++ b/notebooks/process_data/create_h5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,6 +35,7 @@
     "from shutil import which\n",
     "import os\n",
     "import re as re\n",
+    "import h5py\n",
     "\n",
     "### Pick the right path (whether on cluster or at home)\n",
     "socket_name = socket.gethostname()\n",
@@ -177,7 +178,37 @@
     "\n",
     "    df_var[\"totcount\"] = df_var[\"refcount\"] + df_var[\"altcount\"]\n",
     "    df_var[\"maf\"] = df_var[\"altcount\"]/df_var[\"totcount\"]\n",
-    "    return df_var"
+    "    return df_var\n",
+    "\n",
+    "########################################################\n",
+    "########################################################\n",
+    "\n",
+    "def save_h5(seqs, iids, path, output=True):\n",
+    "        \"\"\"Create a new HDF5 File with Sequence Data\n",
+    "        seqs: Genomic Data: [k,l] array\n",
+    "        iids: IIDs to save into HDF5.\n",
+    "        path: Where to save the HDF5 to\"\"\"\n",
+    "        k, l = np.shape(seqs)  # Nr of Individuals and Nr of Loci\n",
+    "        assert(k == len(iids)) ## Sanity Chec\n",
+    "        \n",
+    "        max_len = np.max([len(iid) for iid in iids]) # Longest iid\n",
+    "\n",
+    "        if os.path.exists(path):  # Do a Deletion of existing File there\n",
+    "            os.remove(path)\n",
+    "            \n",
+    "        dt = h5py.special_dtype(vlen=str)  # To have no problem with saving\n",
+    "\n",
+    "        with h5py.File(path, 'w') as f0:\n",
+    "            ### Create all the Groups\n",
+    "            f_gt = f0.create_dataset(\"gt\", (k,l), dtype='|S1')\n",
+    "            f_samples = f0.create_dataset(\"samples\", (k,), dtype=dt)\n",
+    "\n",
+    "            ### Save the Data\n",
+    "            f_gt[:] = seqs.astype(\"|S1\")\n",
+    "            f_samples[:] = np.array(iids)   #.astype(\"S\" + max_len)\n",
+    "\n",
+    "        if output == True:\n",
+    "            print(f\"Successfully saved {k} individuals to: {path}\")"
    ]
   },
   {
@@ -250,40 +281,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_h5(seqs, iids, path, output=True):\n",
-    "        \"\"\"Create a new HDF5 File with Sequence Data\n",
-    "        seqs: Genomic Data: [k,l] array\n",
-    "        iids: IIDs to save into HDF5.\n",
-    "        path: Where to save the HDF5 to\"\"\"\n",
-    "        k, l = np.shape(seqs)  # Nr of Individuals and Nr of Loci\n",
-    "        assert(k == len(iids)) ## Sanity Chec\n",
-    "        \n",
-    "        max_len = np.max([len(iid) for iid in iids]) # Longest iid\n",
-    "\n",
-    "        if os.path.exists(path):  # Do a Deletion of existing File there\n",
-    "            os.remove(path)\n",
-    "            \n",
-    "        dt = h5py.special_dtype(vlen=str)  # To have no problem with saving\n",
-    "\n",
-    "        with h5py.File(path, 'w') as f0:\n",
-    "            ### Create all the Groups\n",
-    "            f_gt = f0.create_dataset(\"gt\", (k,l), dtype='|S1')\n",
-    "            f_samples = f0.create_dataset(\"samples\", (k,), dtype=dt)\n",
-    "\n",
-    "            ### Save the Data\n",
-    "            f_gt[:] = seqs.astype(\"|S1\")\n",
-    "            f_samples[:] = np.array(iids)   #.astype(\"S\" + max_len)\n",
-    "\n",
-    "        if output == True:\n",
-    "            print(f\"Successfully saved {k} individuals to: {path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
@@ -303,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preliminary Analysis"
+    "# Run and Save Allelic Frequency Spectrum (SNPs)"
    ]
   },
   {
@@ -544,7 +541,6 @@
     "### Showcase what variants we have\n",
     "var_path = \"./output/tables/variant_maf.tsv\"\n",
     "df_var = pd.read_csv(var_path, sep=\"\\t\")\n",
-    "\n",
     "df_var = extract_var_df(df1, min_count = 1500, maf = 0.05)\n",
     "\n",
     "### Which Mutations\n",
@@ -826,7 +822,6 @@
     "        idcs = extract_idcs(seqs, pos=row[\"pos\"], der=row[\"alt\"].encode())\n",
     "        assert(np.sum(idcs) == row[\"altcount\"])  # Sanity Check\n",
     "        df_der[str(row[\"pos\"])] = idcs \n",
-    "        \n",
     "    return df_der\n",
     "#idcs = extract_idcs(seqs, pos=23402, der=b\"g\")"
    ]
@@ -861,6 +856,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded HDF5\n",
+      "['gt', 'samples']\n",
+      "(3325, 29903)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"./output/h5/covid_seqs.h5\"\n",
+    "f = h5py.File(path, \"r\") # Load for Sanity Check. See below!  \n",
+    "print(\"Loaded HDF5\")\n",
+    "print(list(f))\n",
+    "print(np.shape(f[\"gt\"]))\n",
+    "assert(np.shape(f[\"gt\"])[0]==len(f[\"samples\"]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -890,7 +909,6 @@
    ],
    "source": [
     "path = \"./output/h5/covid_seqs.h5\"\n",
-    "\n",
     "f = h5py.File(path, \"r\") # Load for Sanity Check. See below!  \n",
     "print(\"Loaded HDF5\")\n",
     "print(list(f))"
