Bug fix that left nans in aligng column in summary .tsv

--- a/notebooks/qc/allelic_mismatches.ipynb
+++ b/notebooks/qc/allelic_mismatches.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current machine: compute-a-16-163.o2.rc.hms.harvard.edu\n",
+      "Current machine: compute-e-16-233.o2.rc.hms.harvard.edu\n",
       "HSM Computational partition detected.\n",
       "/n/groups/reich/hringbauer/git/covid19_data\n"
      ]
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(6,6))\n",
+    "plt.figure(figsize=(4,4))\n",
     "ax=plt.gca()\n",
     "ax.scatter(df_spec[\"refcount\"], df_spec[\"altcount\"], ec='k')\n",
     "ax.set_xlabel(\"Ref Count\")\n",
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze SNPs on 0/1/-1 basis"
+    "# Analyze SNPs on 0/1/-1 basis"
    ]
   },
   {
