Smoothing of pipeline and figures

--- a/notebooks/process_data/align_fasta.ipynb
+++ b/notebooks/process_data/align_fasta.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current machine: compute-a-16-161.o2.rc.hms.harvard.edu\n",
+      "Current machine: compute-a-16-169.o2.rc.hms.harvard.edu\n",
       "HSM Computational partition detected.\n",
       "/n/groups/reich/hringbauer/git/covid19_data\n"
      ]
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,24 +146,25 @@
     "    return include, lgth\n",
     "        \n",
     "def split_fasta(fasta_name, path_out=\"./output/singleseq/\", \n",
-    "                iids=[], clean=True, \n",
-    "                min_cov_bs=20000, output=True):\n",
+    "                iids=[], clean=True, min_cov_bs=20000, \n",
+    "                overwrite=False, output=True):\n",
     "    \"\"\"\n",
     "    Splits up samples from fasta if IID string contains\n",
     "    clean: Whether to clean string (make everything upper-case \n",
     "    and substitute with N)\n",
+    "    overwrite: Whether to overwrite fasta\n",
     "    min_cov_bs: How many bases covered at least once\n",
     "    Return list of samples that have been run\n",
     "    \"\"\"\n",
     "    fiter = fasta_iter_raw(fasta_name)\n",
-    "    \n",
     "    iids_org, iids_prcsd = [], []\n",
     "    cvg, icld = [], []\n",
-    "    j=0\n",
+    "    new=0  # Counter for newly written files\n",
+    "    existing=0 # Counter for exsiting files\n",
     "    \n",
-    "    for sample_line, seq_line in fiter:\n",
+    "    for j, (sample_line, seq_line) in enumerate(fiter):\n",
     "        if j%1000 == 0:\n",
-    "            print(f\"Running individuals  # {j} in fasta\")\n",
+    "            print(f\"Running individual # {j}\")\n",
     "        j+=1\n",
     "        sample = sample_line[1:].strip()\n",
     "        if sample in iids:\n",
@@ -184,11 +185,19 @@
     "            \n",
     "            fasta_name_out = os.path.join(path_out, sample1 + \".fasta\")\n",
     "            exist = os.path.exists(fasta_name_out) # Check whether already there\n",
+    "            existing+= exist  # Add to counter\n",
+    "            \n",
+    "            if overwrite:\n",
+    "                exist=False # Overwrite anyways\n",
     "            \n",
     "            if include and (not exist):\n",
     "                write_fasta(sample_line, seq_line, fasta_name_out, output=output)\n",
+    "                new+=1\n",
     "                \n",
-    "    # Make a Summary Dataframe\n",
+    "    print(f\"Sucessfully written: n={new} fastas into {path_out}\")\n",
+    "    print(f\"Paths already existing: n={existing}\")\n",
+    "                \n",
+    "    ### Make a Summary Dataframe\n",
     "    df = pd.DataFrame({\"iid\":iids_org, \"iid_clean\":iids_prcsd, \n",
     "                        \"cov\":cvg,  \"include\":icld, \"aligned_path\": \"\"})\n",
     "    return df\n",
@@ -239,26 +248,33 @@
     "    \n",
     "    print(f\"Total alignment rows: {len(df)}\")\n",
     "    j=0\n",
+    "    new=0 # Counter Varaible for new alignments\n",
+    "    \n",
     "    for index, row in df.iterrows():\n",
     "        if j%1000==0 and output:\n",
-    "            print(f\"Doing row {j} and up...\")\n",
+    "            print(f\"Doing row {j}\")\n",
     "        j+=1\n",
     "        iid = row[iid_col]\n",
     "        align_path = row[align_col]\n",
     "        align_path1 = os.path.join(out_folder, iid + \".fasta\")\n",
-    "        icld = row[icl_col]\n",
+    "        icld = row[icl_col]  # Variable whether to include that sequence\n",
     "        \n",
-    "        if (align_path != align_path1) and icld: # Works also if np.nan\n",
-    "            df.at[index, align_col] = align_path1\n",
-    "            #row[align_col] = align_path1   # Does not work\n",
-    "            if not os.path.exists(align_path1) or overwrite:  # Check if Path already exisits\n",
-    "                in_path = os.path.join(in_folder, iid + \".fasta\")\n",
-    "                align_mafft(in_path, out_path=align_path1, \n",
-    "                            ref_path=ref_path, thread=threads, output=output) \n",
-    "\n",
+    "        if (align_path != align_path1) and icld:  # Works also if np.nan\n",
+    "            if os.path.exists(align_path1):\n",
+    "                df.at[index, align_col] = align_path1 # Fill in just in cases\n",
+    "                if not overwrite:\n",
+    "                    continue\n",
+    "            new+=1\n",
+    "            in_path = os.path.join(in_folder, iid + \".fasta\")\n",
+    "            align_mafft(in_path, out_path=align_path1, \n",
+    "                        ref_path=ref_path, thread=threads, output=output) \n",
+    "                \n",
+    "    print(f\"Successfully newly aligned n={new} sequences.\")\n",
     "    if len(save_path_df)>0:\n",
     "        df.to_csv(save_path_df, sep=\"\\t\", index=False)\n",
     "        print(f\"Saved Summary Dataframe n={len(df)} to {save_path_df}\")\n",
+    "        \n",
+    "    \n",
     "        \n",
     "def merge_new_existing_df(path_new= \"./output/single_seq_split.tsv\", \n",
     "                          path_existing= \"output/single_seq_aligned.tsv\", \n",
@@ -312,29 +328,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully split up into single fastas.\n",
-      "Saved Summary Dataframe n=15065 to ./output/single_seq_split.tsv\n",
-      "CPU times: user 1min 40s, sys: 1.8 s, total: 1min 42s\n",
-      "Wall time: 5min 31s\n"
+      "Loaded n=4461 IIDs\n",
+      "Splitting up fastas...\n",
+      "Running individual # 0\n",
+      "Running individual # 1000\n",
+      "Running individual # 2000\n",
+      "Running individual # 3000\n",
+      "Running individual # 4000\n",
+      "Sucessfully written: n=0 fastas into ./output/singleseq/\n",
+      "Paths already existing: n=4461\n",
+      "Saved Summary Dataframe n=4461 to ./output/single_seq_split.tsv\n",
+      "CPU times: user 3.87 s, sys: 190 ms, total: 4.06 s\n",
+      "Wall time: 4.79 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "#fasta_path = \"./data/apr20/gisaid_cov2020_sequences.fasta\"  # Change\n",
-    "fasta_path = \"./data/apr20/gisaid_hcov-19_2020_04_29_23_mod.fasta\"\n",
+    "#fasta_path = \"./data/apr20/gisaid_hcov-19_2020_04_29_23_mod.fasta\" # End of April Version\n",
+    "fasta_path = \"./data/may20/gisaid_hcov-19_2020_05_09_05.fasta\"\n",
     "savepath = \"./output/single_seq_split.tsv\"\n",
     "min_cov_bs = 20000\n",
     "\n",
     "fiter = fasta_iter(fasta_path)\n",
     "iids = np.array([ff[0] for ff in fiter])\n",
+    "print(f\"Loaded n={len(iids)} IIDs\")\n",
     "\n",
     "### Could Filter IIDs here\n",
     "print(f\"Splitting up fastas...\")\n",
@@ -343,7 +368,6 @@
     "            iids=iids[:], clean=True, \n",
     "            min_cov_bs=min_cov_bs, output=False)\n",
     "\n",
-    "print(f\"Successfully split up into single fastas.\")\n",
     "df.to_csv(savepath, sep=\"\\t\", index=False)\n",
     "print(f\"Saved Summary Dataframe n={len(df)} to {savepath}\")"
    ]
@@ -353,35 +377,29 @@
    "metadata": {},
    "source": [
     "### Merge new Individuals into existing dataframe\n",
-    "(only keep the existing ones)\n",
-    "\n",
-    "path_new: New Alignments to Load\n",
-    "\n",
-    "path_existing: Former alignment to load (increase by integer)\n",
-    "\n",
-    "savepath: New alignment to save to"
+    "(only keep the existing ones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved New full Dataframe (n=15067) to output/single_seq_aligned2.tsv\n",
-      "CPU times: user 239 ms, sys: 18.1 ms, total: 257 ms\n",
-      "Wall time: 278 ms\n"
+      "Saved New full Dataframe (n=17159) to ./output/single_seq_aligned_temp.tsv\n",
+      "CPU times: user 249 ms, sys: 32.3 ms, total: 281 ms\n",
+      "Wall time: 385 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "df_merge = merge_new_existing_df(path_new= \"./output/single_seq_split.tsv\", # The new sample to include\n",
-    "                                 path_existing= \"./output/df_alignment_existing.tsv\",  # The old samples already existing\n",
-    "                                 savepath = \"./output/single_seq_aligned_temp.tsv\")  #2"
+    "df_merge = merge_new_existing_df(path_new = \"./output/single_seq_split.tsv\", # The new sample to include\n",
+    "                                 path_existing = \"./output/df_alignment_existing.tsv\",  # Former alignment to load (increase by integer)\n",
+    "                                 savepath = \"./output/single_seq_aligned_temp.tsv\")  # New alignment to save to"
    ]
   },
   {
@@ -396,29 +414,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved Summary Dataframe n=15067 to output/single_seq_aligned3.tsv\n",
-      "CPU times: user 1min 10s, sys: 1min 13s, total: 2min 23s\n",
-      "Wall time: 1h 3min 36s\n"
+      "Total alignment rows: 17159\n",
+      "Doing row 0\n",
+      "Doing row 1000\n",
+      "Doing row 2000\n",
+      "Doing row 3000\n",
+      "Doing row 4000\n",
+      "Doing row 5000\n",
+      "Doing row 6000\n",
+      "Doing row 7000\n",
+      "Doing row 8000\n",
+      "Doing row 9000\n",
+      "Doing row 10000\n",
+      "Doing row 11000\n",
+      "Doing row 12000\n",
+      "Doing row 13000\n",
+      "Doing row 14000\n",
+      "Doing row 15000\n",
+      "Doing row 16000\n",
+      "Doing row 17000\n",
+      "Successfully aligned n=0 sequences.\n",
+      "Saved Summary Dataframe n=17159 to ./output/single_seq_aligned_temp2.tsv\n",
+      "CPU times: user 3.58 s, sys: 41.7 ms, total: 3.62 s\n",
+      "Wall time: 3.99 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "df = pd.read_csv(\"./output/single_seq_aligned_temp.tsv\", sep=\"\\t\")  # Containg the results so far\n",
+    "df = pd.read_csv(\"./output/single_seq_aligned_temp.tsv\", sep=\"\\t\")  # Containg the results to add\n",
     "\n",
     "align_mafft_multiple(df, \n",
     "                     in_folder = \"./output/singleseq/\",\n",
     "                     out_folder=\"./output/singleseq_aligned/\",\n",
     "                     ref_path = \"./data/reference/wuhan-hu-1.fasta\",\n",
-    "                     save_path_df = \"./output/single_seq_aligned_temp1.tsv\", \n",
-    "                     overwrite=False,\n",
+    "                     save_path_df = \"./output/single_seq_aligned_temp1.tsv\", # Where to save the full, new output\n",
+    "                     overwrite=False, output=True,\n",
     "                     threads=10)"
    ]
   },
@@ -426,20 +464,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overwrite the exisiting \"backup\"\n",
+    "### If all successful: Overwrite the exisiting \"backup\"\n",
     "Only do that if everything works - there is no way back!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 15067 Individuals\n",
+      "Loaded 17159 Individuals\n",
       "Saved to ./output/df_alignment_existing.tsv\n"
      ]
     }
